--- a/package.json
+++ b/package.json
@@ -13,18 +13,24 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@nrwl/next": "^14.1.7",
+    "@types/js-cookie": "^3.0.2",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "framer-motion": "^6.3.3",
+    "js-cookie": "^3.0.1",
     "next": "12.1.5",
     "postcss": "^8.4.14",
     "qs": "^6.10.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-icons": "^4.3.1",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "regenerator-runtime": "0.13.7",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
+    "swr": "^1.3.0",
     "tailwindcss": "^3.0.24",
     "tslib": "^2.3.0"
   },
@@ -37,6 +43,7 @@
     "@nrwl/react": "14.1.7",
     "@nrwl/web": "14.1.7",
     "@nrwl/workspace": "14.1.7",
+    "@nx-extend/strapi": "^2.1.1",
     "@testing-library/react": "13.1.1",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
