--- a/package.json
+++ b/package.json
@@ -44,7 +44,11 @@
     "@nrwl/web": "14.1.7",
     "@nrwl/workspace": "14.1.7",
     "@nx-extend/strapi": "^2.1.1",
+    "@nxext/svelte": "^14.0.0",
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.41",
     "@testing-library/react": "13.1.1",
+    "@testing-library/svelte": "^3.1.1",
+    "@tsconfig/svelte": "^3.0.0",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
     "@types/react": "18.0.8",
@@ -52,6 +56,7 @@
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
     "babel-jest": "27.5.1",
+    "c8": "^7.11.0",
     "cypress": "^9.1.0",
     "eslint": "~8.12.0",
     "eslint-config-next": "12.1.5",
@@ -61,13 +66,19 @@
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.5.0",
+    "eslint-plugin-svelte3": "^3.4.1",
     "jest": "27.5.1",
     "nx": "14.1.7",
     "prettier": "^2.5.1",
     "react-test-renderer": "18.1.0",
     "sass": "1.43.2",
+    "svelte": "^3.47.0",
+    "svelte-check": "^2.7.0",
+    "svelte-jester": "^2.3.2",
+    "svelte-preprocess": "^4.10.6",
     "ts-jest": "27.1.4",
     "ts-node": "9.1.1",
-    "typescript": "~4.6.2"
+    "typescript": "~4.6.2",
+    "vitest": "^0.9.3"
   }
 }
