--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@nrwl/next": "^14.1.7",
+    "@nrwl/nx-cloud": "^14.0.5",
     "@types/js-cookie": "^3.0.2",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
