--- a/package.json
+++ b/package.json
@@ -15,13 +15,11 @@
     "@nrwl/next": "^14.1.7",
     "@nrwl/nx-cloud": "^14.0.5",
     "@types/js-cookie": "^3.0.2",
-    "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "framer-motion": "^6.3.3",
     "js-cookie": "^3.0.1",
     "next": "12.1.5",
-    "postcss": "^8.4.14",
     "qs": "^6.10.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -32,7 +30,6 @@
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "swr": "^1.3.0",
-    "tailwindcss": "^3.0.24",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -56,6 +53,7 @@
     "@types/react-dom": "18.0.3",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
+    "autoprefixer": "^10.4.7",
     "babel-jest": "27.5.1",
     "c8": "^7.11.0",
     "cypress": "^9.1.0",
@@ -69,7 +67,11 @@
     "eslint-plugin-react-hooks": "4.5.0",
     "eslint-plugin-svelte3": "^3.4.1",
     "jest": "27.5.1",
+    "node-sass": "^7.0.1",
     "nx": "14.1.7",
+    "postcss": "^8.4.14",
+    "postcss-import": "^14.1.0",
+    "postcss-preset-env": "^7.6.0",
     "prettier": "^2.5.1",
     "react-test-renderer": "18.1.0",
     "sass": "1.43.2",
@@ -77,6 +79,7 @@
     "svelte-check": "^2.7.0",
     "svelte-jester": "^2.3.2",
     "svelte-preprocess": "^4.10.6",
+    "tailwindcss": "^3.0.24",
     "ts-jest": "27.1.4",
     "ts-node": "9.1.1",
     "typescript": "~4.6.2",
