--- a/package.json
+++ b/package.json
@@ -47,12 +47,14 @@
     "@testing-library/react": "13.1.1",
     "@testing-library/svelte": "^3.1.1",
     "@tsconfig/svelte": "^3.0.0",
+    "@types/alpinejs": "^3.7.0",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
+    "alpinejs": "^3.10.2",
     "autoprefixer": "^10.4.7",
     "babel-jest": "27.5.1",
     "c8": "^7.11.0",
